# AdventOfCode

./: .gitignore  CMakeLists.txt  README.md  run_all_2021.sh  run_all_2022.sh
01/: CMakeLists.txt
02/: CMakeLists.txt
03/: CMakeLists.txt  day03.c  day03_impl.c
04/: day04.c  day04_impl.h  day04_tests.c
05/: day05.c  day05_impl.c  day05_impl.h  day05_tests.c
06/: day06_impl.c  day06_tests.c
07/: CMakeLists.txt  day07_tests.c
08/: CMakeLists.txt  day08.c  day08_impl.c  day08_tests.c
09/: CMakeLists.txt  day09.c  day09_impl.c  day09_tests.c
1/: CMakeLists.txt  day1.c
10/: CMakeLists.txt  day10_tests.c
11/: day11.c  day11_impl.c  day11_impl.h  day11_tests.c
12/: day12_impl.c  day12_impl.h  day12_tests.c
13/: day13.c  day13_impl.c  day13_impl.h  day13_tests.c
14/: day14_impl.c
15/: day15.c  day15_impl.c  day15_impl.h  day15_tests.c
16/: CMakeLists.txt  day16_impl.c  day16_impl.h  day16_tests.c
17/: CMakeLists.txt  day17.c  day17_impl.c  day17_impl.h  day17_tests.c  example_input  performance_test_example_input
18/: CMakeLists.txt  day18.c  day18_impl.c  day18_impl.h  day18_tests.c
19/: CMakeLists.txt  day19_impl.c  day19_impl.h  day19_tests.c
2/: CMakeLists.txt  day2.c
20/: day20.c  day20_impl.c  day20_tests.c  example_input
2021/: CMakeLists.txt
2021/03/: day03_impl.h  day03_tests.c
2021/04/: CMakeLists.txt  day04_impl.c  day04_impl.h
2021/05/: CMakeLists.txt
2021/06/: CMakeLists.txt  day06.c
2021/07/: day07.c  day07_impl.c
2021/08/: day08_impl.h
2021/09/: day09_impl.c  day09_impl.h
2021/10/: day10.c  day10_impl.c  day10_impl.h
2021/11/: CMakeLists.txt  day11_impl.c  day11_impl.h
2021/12/: CMakeLists.txt  day12.c  day12_impl.c  day12_impl.h
2021/13/: CMakeLists.txt  day13.c  day13_impl.c  day13_impl.h  day13_tests.c
2021/14/: CMakeLists.txt  day14.c  day14_impl.c  day14_impl.h  day14_tests.c
2021/15/: CMakeLists.txt  day15_impl.c  day15_impl.h
2021/16/: day16.c  day16_impl.h
2021/17/: day17_impl.c
2021/19/: day19.c  day19_tests.c
2021/20/: CMakeLists.txt  day20_impl.c
2021/22/: day22_impl.h
2021/23/: CMakeLists.txt  day23.c  day23_tests.c  solution
2021/24/: day24_impl.c  day24_tests.c
2021/25/: CMakeLists.txt  day25.c  day25_impl.c  day25_tests.c
2022/: CMakeLists.txt
2022/01/: CMakeLists.txt  day01.c  day01_impl.c  day01_tests.c
2022/02/: CMakeLists.txt  day02.c  day02_impl.c  day02_tests.c
2022/03/: CMakeLists.txt  day03.c  day03_impl.c  day03_tests.c
2022/04/: CMakeLists.txt  day04.c  day04_impl.c  day04_tests.c
2022/05/: CMakeLists.txt  day05.c  day05_impl.c  day05_impl.h  day05_tests.c
2022/06/: CMakeLists.txt  day06.c  day06_impl.c  day06_impl.h  day06_tests.c
2022/07/: CMakeLists.txt  day07.c  day07_impl.c  day07_impl.h  day07_tests.c
2022/08/: CMakeLists.txt  day08.c  day08_impl.c  day08_impl.h  day08_tests.c
2022/09/: CMakeLists.txt  day09.c  day09_impl.c  day09_impl.h  day09_tests.c
2022/10/: CMakeLists.txt  day10.c  day10_impl.c  day10_impl.h  day10_tests.c
2022/11/: CMakeLists.txt  day11.c  day11_impl.c  day11_impl.h  day11_tests.c
2022/12/: CMakeLists.txt  day12.c  day12_impl.c  day12_impl.h  day12_tests.c
2022/13/: CMakeLists.txt  day13.c  day13_impl.c  day13_impl.h  day13_tests.c
2022/14/: CMakeLists.txt  day14.c  day14_impl.c  day14_impl.h  day14_tests.c
2022/15/: CMakeLists.txt  day15.c  day15_impl.c  day15_impl.h  day15_tests.c
2022/16/: CMakeLists.txt  day16.c  day16_impl.c  day16_tests.c
2022/17/: CMakeLists.txt  day17.c  day17_impl.c  day17_impl.h  day17_tests.c
2022/18/: CMakeLists.txt  day18.c  day18_impl.c  day18_impl.h  (+1 more)
2022/19/: CMakeLists.txt  day19.c  day19_generate_tablebase.c  day19_impl.c  day19_impl.h  day19_tests.c  tablebase24.h  tablebase32.h  tablebase_util.h
21/: CMakeLists.txt  day21.c  day21_impl.c  day21_impl.h  day21_tests.c
22/: CMakeLists.txt  day22.c  day22_impl.c  day22_tests.c
23/: day23_impl.c  example_input
24/: CMakeLists.txt  day24.c  day24_impl.c  day24_impl.h
25/: day25_impl.h
3/: CMakeLists.txt  day3.c  day3_impl.c  day3_tests.c
4/: CMakeLists.txt  day4.c  day4_impl.c  day4_impl.h  day4_tests.c
5/: CMakeLists.txt  day5.c  day5_impl.c  day5_impl.h  day5_tests.c
6/: CMakeLists.txt  day6.c  day6_impl.c  day6_impl.h  day6_tests.c
7/: CMakeLists.txt  day7.c  day7_impl.c  day7_impl.h  day7_tests.c
8/: CMakeLists.txt  day8.c  day8_impl.c  day8_tests.c
9/: CMakeLists.txt  day9.c  day9_impl.c  day9_impl.h  day9_tests.c
common/: CMakeLists.txt  bitset.h  bitset_tests.c  conversions.c  conversions.h  counter.h  deque.c  deque.h  deque_tests  deque_tests.c  file_loading.c  file_loading.h  linked_list.c  linked_list.h  linked_list_tests.c  list.c  list.h  list_tests  list_tests.c  list_tuple2.h  list_tuple3.h  map.h  ocr.h  priority_queue.h  rangeset.h  rangeset_tests.c  set.h  set_tuple2.h  set_tuple3.h  simd_util.h  sized_priority_queue.h  tuple_list.h  util.h
include/: aoc_util.h
(+30 files in other folders)
